--- a/app/src/main/res/drawable/snackbar_background.xml
+++ b/app/src/main/res/drawable/snackbar_background.xml
@@ -13,14 +13,10 @@
   ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
--->
+  -->
 
-
-
-<view style="@style/Widget.Design.Snackbar"
-      class="com.linute.linute.UtilsAndHelpers.CustomSnackbar$SnackbarLayout"
-      xmlns:android="http://schemas.android.com/apk/res/android"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_gravity="top"
-/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+       android:shape="rectangle">
+    <corners android:radius="@dimen/snackbar_background_corner_radius"/>
+    <solid android:color="@color/snackbar_background_color"/>
+</shape>
