--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -11,4 +11,12 @@
         <attr name="android:textColor" />
         <attr name="android:textColorHint" />
     </declare-styleable>
+
+
+    <declare-styleable name="CustomSnackbarLayout">
+        <attr name="android:maxWidth"/>
+        <attr name="elevation"/>
+        <attr name="cmaxActionInlineWidth" format="dimension"/>
+    </declare-styleable>
+
 </resources>
