--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
 
             </android.support.design.widget.AppBarLayout>
 
-            <FrameLayout android:id="@+id/mainActivity_fragment_holder"
+            <android.support.design.widget.CoordinatorLayout android:id="@+id/mainActivity_fragment_holder"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
