--- a/app/src/main/res/layout/fragment_rooms.xml
+++ b/app/src/main/res/layout/fragment_rooms.xml
@@ -10,7 +10,7 @@
               android:layout_height="wrap_content"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="100dp"
-              android:text="No messages..."
+              android:text="No messages"
               android:textSize="@dimen/header_font_size"
               android:visibility="gone"
     />
