--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -55,5 +55,10 @@
 
     <color name="user_comment_color">#56bb1d</color>
 
+
+    <color name="snackbar_background_color">#323232</color>
+
+    <color name="notification_color">#CC2786BB</color>
+
 </resources>
 
