--- a/app/src/main/res/layout/fragment_updates_item_cells.xml
+++ b/app/src/main/res/layout/fragment_updates_item_cells.xml
@@ -10,7 +10,10 @@
         android:id="@+id/updatesFragment_profile_picture"
         android:layout_width="@dimen/profile_image_radius"
         android:layout_height="@dimen/profile_image_radius"
-        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         app:civ_border_color="@color/seperator_color"
         app:civ_border_width="1dp"
         tools:background="@android:color/darker_gray"
@@ -31,9 +34,13 @@
         android:layout_width="@dimen/profile_image_radius"
         android:layout_height="@dimen/profile_image_radius"
         android:layout_alignParentEnd="true"
-        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:scaleType="centerCrop"
-        tools:background="@android:color/darker_gray"/>
+        android:padding="1dp"
+        android:background="@color/seperator_color"/>
 
     <LinearLayout android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
