--- a/app/src/main/res/layout/fragment_updates_section_header.xml
+++ b/app/src/main/res/layout/fragment_updates_section_header.xml
@@ -2,8 +2,7 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:orientation="vertical"
-              tools:context=".MainContent.ProfileFragment.ProfileFragment">
+              android:orientation="vertical">
 
     <TextView android:id="@+id/updateFragment_section_title"
               android:layout_width="wrap_content"
@@ -21,7 +20,7 @@
           android:layout_marginRight="15dp"
           android:layout_marginTop="5dp"
           android:background="@color/fifty_black"
-          android:layout_marginBottom="16dp"
+          android:layout_marginBottom="8dp"
         />
 
 
