--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,8 @@
                                                                   app:fab_addButtonColorPressed="#a3e1de"
                                                                   app:fab_expandDirection="up"
                                                                   app:fab_labelsPosition="left"
-                                                                  app:layout_behavior="com.linute.linute.UtilsAndHelpers.ScrollingFAMBehavior">
+                                                                  >
+                <!--app:layout_behavior="com.linute.linute.UtilsAndHelpers.ScrollingFAMBehavior"-->
 
                 <com.getbase.floatingactionbutton.FloatingActionButton android:id="@+id/fabImage"
                                                                        android:layout_width="wrap_content"
