--- a/app/src/main/res/layout/squarecamera__fragment_camera.xml
+++ b/app/src/main/res/layout/squarecamera__fragment_camera.xml
@@ -1,10 +1,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    tools:context="com.desmond.squarecamera.CameraFragment">
+    android:background="@color/colorPrimary">
 
     <com.linute.linute.SquareCamera.SquareCameraPreview
         android:id="@+id/camera_preview_view"
