--- a/app/src/main/res/drawable/square_camera_selected.xml
+++ b/app/src/main/res/drawable/square_camera_selected.xml
@@ -1,23 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
 
-    <item android:gravity="center">
-        <shape android:shape="oval">
-            <solid android:color="#4D67CDC9"/>
-            <size android:width="60dp"
-                  android:height="60dp"
-            />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+       android:shape="oval">
 
-        </shape>
-    </item>
+    <solid android:color="#4D67CDC9"/>
 
-    <item android:gravity="center">
-        <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
-            <stroke android:width="2dp" android:color="@color/pure_white"/>
-            <size android:height="68dp"
-                  android:width="68dp"/>
-        </shape>
-    </item>
-
-</layer-list>
+    <size android:width="60dp"
+          android:height="60dp"
+    />
+</shape>
