--- a/app/src/main/res/layout/fragment_need_permissions.xml
+++ b/app/src/main/res/layout/fragment_need_permissions.xml
@@ -10,7 +10,7 @@
               android:layout_marginStart="32dp"
               android:layout_marginEnd="32dp"
               android:gravity="center"
-              android:text="Take photos with Tapt's camera"
+              android:text="Take photos and record videos with Tapt's camera"
               android:textColor="@android:color/white"
               android:textSize="18dp"
               android:textStyle="bold"/>
@@ -20,7 +20,7 @@
               android:gravity="center"
               android:layout_marginStart="32dp"
               android:layout_marginEnd="32dp"
-              android:text="Tapt needs permission to use your phone's camera and storage."
+              android:text="Tapt needs permission to use your phone's camera, storage, and audio to take pictures and record video."
               android:textColor="@android:color/darker_gray"
               android:textSize="16dp"
     />
