--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -13,10 +13,10 @@
     </style>
 -->
 
-    <style name="squarecamera__CameraFullScreenTheme"
-           parent="squarecamera__CameraFullScreenTheme.Base">
-        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-    </style>
+    <!--<style name="squarecamera__CameraFullScreenTheme"-->
+           <!--parent="squarecamera__CameraFullScreenTheme.Base">-->
+        <!--<item name="android:windowDrawsSystemBarBackgrounds">true</item>-->
+    <!--</style>-->
 
     <!--<style name="PostDialog" parent="android:Theme.Dialog" >-->
     <!--<item name="android:windowNoTitle">false</item>-->
