--- a/app/src/main/res/layout/college_picker_item.xml
+++ b/app/src/main/res/layout/college_picker_item.xml
@@ -2,21 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-    <ImageView android:id="@+id/collegePicker_search_icon"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_alignParentStart="true"
-               android:layout_centerVertical="true"
-               android:layout_margin="@dimen/activity_horizontal_margin"
-               android:src="@drawable/ic_action_action_search_light"/>
+                android:layout_height="48dp">
 
     <TextView android:id="@+id/collegePicker_item_name_text"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              android:layout_marginStart="16dp"
+              android:layout_marginEnd="16dp"
               android:layout_centerVertical="true"
-              android:layout_toEndOf="@id/collegePicker_search_icon"
+              android:ellipsize="end"
               android:singleLine="true"
               tools:text="Baruch College"
         />
