--- a/app/src/main/res/layout/square_camera_edit_save_video.xml
+++ b/app/src/main/res/layout/square_camera_edit_save_video.xml
@@ -15,33 +15,21 @@
                                            android:background="@color/colorPrimary"
                                            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
 
-        <RelativeLayout android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginEnd="16dp">
+
 
             <ImageButton
                 android:id="@+id/save_photo"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_marginEnd="16dp"
                 android:background="@android:color/transparent"
+                android:layout_alignParentEnd="true"
                 android:src="@drawable/ic_action_check83"/>
-
-            <ProgressBar
-                android:id="@+id/editFragment_progress_bar"
-                style="?android:attr/progressBarStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:visibility="gone"
-            />
-
-        </RelativeLayout>
     </RelativeLayout>
 
     <com.linute.linute.UtilsAndHelpers.VideoClasses.TextureVideoView android:id="@+id/video_frame"
                                                                      android:layout_width="match_parent"
-                                                                     android:layout_height="match_parent"
+                                                                     android:layout_height="wrap_content"
                                                                      android:layout_alignParentEnd="true"
                                                                      android:layout_alignParentStart="true"
                                                                      android:layout_below="@id/tool_bar_container"/>
@@ -51,9 +39,16 @@
                                                          android:layout_width="match_parent"
                                                          android:layout_height="wrap_content"
                                                          android:layout_below="@id/tool_bar_container"
-    />
+    >
 
-    <RelativeLayout android:id="@+id/editFragment_button_layer"
+        <ImageView android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:src="@drawable/ic_action_add_light"
+                   android:layout_gravity="center"
+                   android:id="@+id/play_icon"/>
+        </com.linute.linute.UtilsAndHelpers.SquareFrameLayout>
+
+    <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_below="@id/square_videoFrame"
