--- a/app/src/main/res/layout/square_camera_take_photo.xml
+++ b/app/src/main/res/layout/square_camera_take_photo.xml
@@ -90,6 +90,7 @@
 
 
                     <ImageView android:id="@+id/cameraFragment_galleryButton"
+                               android:contentDescription="Gallery"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="50dp"
@@ -108,6 +109,7 @@
 
                         <ImageView
                             android:id="@+id/capture_image_button"
+                            android:contentDescription="Camera"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@drawable/square_camera_unselected"
