--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -11,7 +11,8 @@
                android:alpha="0.35"
                android:padding="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_action_navigation_arrow_back_inverted"
-        />
+    />
+
 
     <LinearLayout
         android:id="@+id/signin_email_login_form"
@@ -20,8 +21,25 @@
         android:layout_marginBottom="40dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="100dp"
         android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/signin_create_button"
+            android:layout_width="125dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="16dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/create_button"/>
+
+
+        <TextView android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_gravity="center_horizontal"
+                  android:text="-OR-"
+                  android:textColor="@color/fifty_white"
+        />
 
 
         <EditText
@@ -30,6 +48,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/prompt_email"
             android:inputType="textEmailAddress"
+            android:layout_marginTop="16dp"
             android:maxLines="1"
             android:singleLine="true"
             android:textColor="@color/fifty_white"
@@ -53,45 +72,33 @@
 
     </LinearLayout>
 
-    <LinearLayout android:id="@+id/login_buttons_layer"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:layout_below="@+id/signin_email_login_form"
-                  android:layout_marginEnd="46dp"
-                  android:layout_marginStart="46dp">
 
-        <ImageView
-            android:id="@+id/signin_create_button"
-            android:layout_width="0px"
-            android:layout_height="wrap_content"
-            android:layout_weight="6"
-            android:scaleType="fitCenter"
-            android:src="@drawable/create_button"/>
-
-        <View android:layout_width="0px"
-              android:layout_height="0px"
-              android:layout_weight="1"/>
+    <RelativeLayout android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/signin_email_login_form"
+                    android:layout_centerHorizontal="true"
+    >
 
         <ImageView
             android:id="@+id/signin_signin_button"
-            android:layout_width="0px"
+            android:layout_width="125dp"
             android:layout_height="wrap_content"
-            android:layout_weight="6"
+
+            android:layout_centerHorizontal="true"
             android:scaleType="fitCenter"
             android:src="@drawable/login_button"
-            />
+        />
 
+        <ProgressBar
+            android:id="@+id/signin_progress_bar"
+            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone"/>
 
-    </LinearLayout>
+    </RelativeLayout>
 
-    <ProgressBar
-        android:id="@+id/signin_progress_bar"
-        style="?android:attr/progressBarStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/signin_email_login_form"
-        android:layout_centerHorizontal="true"
-        android:visibility="gone"/>
 
     <TextView android:id="@+id/login_forgot_pass"
               android:layout_width="wrap_content"
@@ -102,7 +109,7 @@
               android:text="Forgot password"
               android:textColor="@color/thirtyfive_white"
 
-        />
+    />
 
 
 </RelativeLayout>
