--- a/app/src/main/res/layout/fragment_updates_item_cells.xml
+++ b/app/src/main/res/layout/fragment_updates_item_cells.xml
@@ -39,7 +39,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:scaleType="centerCrop"
-        android:padding="1dp"
+        android:padding="1px"
         android:background="@color/seperator_color"/>
 
     <LinearLayout android:layout_width="wrap_content"
