--- a/app/src/main/res/layout/square_camera_edit_save_video.xml
+++ b/app/src/main/res/layout/square_camera_edit_save_video.xml
@@ -41,9 +41,9 @@
                                                          android:layout_below="@id/tool_bar_container"
     >
 
-        <ImageView android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:src="@drawable/ic_action_add_light"
+        <ImageView android:layout_width="100dp"
+                   android:layout_height="100dp"
+                   android:src="@drawable/ic_cinema"
                    android:layout_gravity="center"
                    android:id="@+id/play_icon"/>
         </com.linute.linute.UtilsAndHelpers.SquareFrameLayout>
