--- a/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
+++ b/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
@@ -41,6 +41,7 @@
     <RelativeLayout android:id="@+id/frame"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:focusableInTouchMode="true"
                     android:background="@android:color/white">
 
         <com.linute.linute.SquareCamera.SquareImageView
