fixed delete comment issue

--- a/app/src/main/res/layout/fragment_feed_detail_page.xml
+++ b/app/src/main/res/layout/fragment_feed_detail_page.xml
@@ -11,6 +11,7 @@
     android:layout_marginTop="?android:attr/actionBarSize"
     android:background="@color/white">
 
+
     <LinearLayout android:id="@+id/comment_container"
                   android:layout_width="match_parent"
                   android:layout_height="50dp"
@@ -99,17 +100,16 @@
 
     </LinearLayout>
 
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/feed_detail_recyc"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_above="@id/comment_container"/>
 
     <android.support.v7.widget.RecyclerView android:id="@+id/feed_detail_mentions"
                                             android:background="@color/white"
                                             android:layout_width="match_parent"
-                                            android:layout_height="wrap_content"
+                                            android:layout_height="match_parent"
                                             android:layout_above="@id/comment_container"
                                             android:visibility="gone"/>
 
