--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -1,9 +1,37 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:background="@color/colorPrimary"
-             tools:context="com.linute.linute.SquareCamera.GalleryFragment">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/pure_black">
 
 
-</FrameLayout>
+
+    <com.lyft.android.scissors.CropView
+        android:id="@+id/crop_view_scis"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cropviewViewportHeightRatio="1"
+    />
+
+
+    <RelativeLayout android:id="@+id/tool_bar_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="?android:attr/actionBarSize">
+
+        <android.support.v7.widget.Toolbar android:id="@+id/crop_image_toolbar"
+                                           android:layout_width="match_parent"
+                                           android:layout_height="?android:attr/actionBarSize"
+                                           android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
+
+        <ImageButton
+            android:id="@+id/save_photo"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="16dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_action_check83"/>
+
+    </RelativeLayout>
+
+</RelativeLayout>
